(feature): Add title for Card and add left panel for discription , change animation card

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   background-color: #151a1e;
   display: grid;
-  grid-template-columns: 1fr minmax(300px, 1.5fr) 2fr;
+  grid-template-columns: 1fr minmax(300px, 1.5fr) 50%;
   align-items: center;
   color: white;
   gap: 20px;
