--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,5 +1,3 @@
-@import url("./animate.scss");
-
 .body-container {
   width: 100%;
   min-height: 700px;
@@ -20,36 +18,14 @@
       align-items: start;
       flex-direction: column;
       gap: 10px;
-      .about {
-        color: #f4c601;
-        font-size: 30px;
-        font-family: "Mukta", sans-serif;
-        width: 100%;
-        text-align: start;
-        text-transform: uppercase;
-        user-select: none;
-      }
-      .paragraph {
-        color: white;
-        font-size: 18px;
-        line-height: 150%;
-        user-select: none;
-      }
+      overflow: hidden;
+
       .contact {
         margin-top: 30px;
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-        gap: 5px;
-        &__label {
-          letter-spacing: 3px;
-          user-select: none;
-          font-family: "Mukta", sans-serif;
-          color: #f59e0b;
-          font-size: 20px;
-        }
+        gap: 20px;
       }
     }
     &__center {
