--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,6 +1,7 @@
 .body-container {
   width: 100%;
   min-height: 700px;
+  position: relative;
   padding: 50px 0px 50px 50px;
   .rectangels-wrapper {
     width: 100%;
@@ -54,4 +55,10 @@
 .hide {
   visibility: hidden;
   transition: all 0.5s ease;
+}
+
+@media screen and (max-width: 1200px) {
+  .body-container {
+    padding: 20px 0px 20px 20px;
+  }
 }
