--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -57,8 +57,51 @@
   transition: all 0.5s ease;
 }
 
+@media screen and (max-width: 1300px) {
+  .body-container {
+    padding: 0;
+    .rectangels-wrapper {
+      overflow: hidden;
+      height: auto;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: 500px auto;
+      &__introduce {
+        height: 100%;
+        grid-row: 2;
+        grid-column: 1/4;
+      }
+      &__center {
+        display: none;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .body-container {
-    padding: 20px 0px 20px 20px;
+    padding: 0px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .body-container {
+    .rectangels-wrapper {
+      &__introduce {
+        padding: 30px 10px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 725px) {
+  .body-container {
+    .rectangels-wrapper {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, 300px) auto;
+      &__introduce {
+        grid-row: 4;
+        grid-column: 1;
+      }
+    }
   }
 }
