--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -119,60 +119,10 @@
   }
 }
 
-@keyframes appearContent {
-  0% {
-    width: 0;
-    opacity: 0;
-  }
-  100% {
-    width: 100%;
-    opacity: 1;
-  }
-}
-
-@keyframes disappearContent {
-  0% {
-    width: 100%;
-    opacity: 1;
-  }
-  100% {
-    width: 0;
-    opacity: 0;
-  }
-}
-
-@keyframes closePopup {
-  0% {
-    top: 0;
-    left: 0px;
-    right: 0px;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 0px;
-  }
-  100% {
-    width: 0px;
-    height: 0px;
-    opacity: 0;
-  }
-}
-
-@keyframes openPopup {
-  0% {
-    width: 50px;
-    height: 50px;
-  }
-  100% {
-    opacity: 1;
-    top: 0;
-    left: 0px;
-    right: 0px;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 0px;
-  }
+.emphasis {
+  color: #f4c601;
+  font-size: 17px;
+  font-family: "Mukta", sans-serif;
 }
 
 @media screen and (max-width: 1800px) {
@@ -225,6 +175,18 @@
         0 20%,
         0 10%
       );
+    }
+  }
+}
+@media screen and (max-width: 1300px) {
+  .popup-event {
+    .describe--appear {
+      animation-delay: 0s;
+    }
+    &--open,
+    &--close {
+      animation-delay: 0s;
+      animation-duration: 0.9s;
     }
   }
 }
@@ -286,39 +248,43 @@
   }
 }
 
-@media screen and (max-width: 800px) {
-  .popup-event {
-    .describe {
-      clip-path: none;
-    }
-  }
-}
-
-.emphasis {
-  color: #f4c601;
-  font-size: 17px;
-  font-family: "Mukta", sans-serif;
-}
-
 @media screen and (max-width: 900px) {
   .popup-event {
+    left: 0;
+    border-radius: 0px;
+    top: 0;
+    width: 0;
     &__rectangle {
       display: none;
     }
     &__content {
-      width: 80%;
+      width: calc(100% - 32px);
+      height: 100vh;
       .describe {
         clip-path: none;
         &__content {
-          transform: translateX(50px);
-          width: calc(100% - 50px);
+          transform: translateX(0px);
+          width: 100%;
         }
       }
     }
     &__exit-btn {
       z-index: 1;
-      right: 20px;
-      top: 40px;
+      right: 40px;
+      top: 65px;
+      i {
+        width: 50px;
+        height: 50px;
+        font-size: 25px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .popup-event {
+    .describe {
+      clip-path: none;
     }
   }
 }
@@ -334,5 +300,78 @@
         width: 100%;
       }
     }
+    &__exit-btn {
+      top: 50px;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .popup-event {
+    padding: 0px;
+    .describe--appear {
+      height: 100vh;
+      margin-top: 0;
+    }
+    &__exit-btn {
+      top: 20px;
+      right: 20px;
+    }
+  }
+}
+
+@keyframes appearContent {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes disappearContent {
+  0% {
+    width: 100%;
+    opacity: 1;
+  }
+  100% {
+    width: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes closePopup {
+  0% {
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+  }
+  100% {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+  }
+}
+
+@keyframes openPopup {
+  0% {
+    width: 50px;
+    height: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
   }
 }
